--- a/kodlOdev.html
+++ b/kodlOdev.html
@@ -22,5 +22,8 @@
         <h3>person of interest</h3>
         <p>......</p>
     </strong></p>
+    </strong></p>
+    <img src="resim1.jpg" alt="savaşçı" style="border: 4; align-content: center; ">
+    <a href="https://www.imdb.com/title/tt1839578/" style="color: burlywood;">IMDB</a>
 </body>
 </html>
